--- a/src/main/resources/templates/Empleado/editarEmpleado.html
+++ b/src/main/resources/templates/Empleado/editarEmpleado.html
@@ -23,7 +23,7 @@
     <h1> Cambie aqui los datos del Empleado</h1>
     <br>
     <!--Crear formulario para llenar los datos del empleado  y guardarlo en el objeto empl -->
-    <form th:action="@{/ActualizarEmpleado}" th:object="${empl}" method="post">
+    <form th:action="@{/ActualizarEmpleado/{id}(id=${usuario.idEmpleado})}" th:object="${empl}" method="post">
 
 
         <div class="row">
@@ -47,7 +47,7 @@
             <div class="form-group col-md-12">
                 <label class="col-md-3" for="correoEmpleado">Correo del Empleado:</label>
                 <div class="col-md-6">
-                    <input type="email" th:field="*{correoEmpleado}" class="form-control" id="correoEmpleado" required="required"></div>
+                    <input type="email" th:field="  *{correoEmpleado}" class="form-control" id="correoEmpleado" required="required"></div>
             </div>
         </div>
 
@@ -56,7 +56,7 @@
             <div class="form-group col-md-12">
                 <label class="col-md-3" for="empresaEmpleado">Empresa a la que pertenece:</label>
                 <div class="col-md-6">
-                    <select th:field="*{empresaEmpleado.idEmpresa}" name="empresaEmpleado" class="form-control" id="empresaEmpleado">
+                    <select th:field="*{empresaEmpleado.idEmpresa}" name="empresaEmpleado" class="form-control" id="empresaEmpleado" required="required">
                         <option  value="0" selected>Seleccione Empresa</option>
                         <option th:each="empresa : ${emprelist}"
                                 th:value="${empresa.idEmpresa}"
@@ -71,8 +71,8 @@
             <div class="form-group col-md-12">
                 <label class="col-md-3" for="rolEmpleado">Rol del Empleado:</label>
                 <div class="col-md-6">
-                    <select th:field="*{rolEmpleado}" name="rolEmpleado" id="rolEmpleado" class="form-control">
-                        <option  value="0" selected>Seleccione el rol</option>
+                    <select th:field="*{rolEmpleado}" name="rolEmpleado" id="rolEmpleado" class="form-control" required="required">
+                        <option value="0" selected>Seleccione el rol</option>
                         <option th:each="rol : ${T(co.mintic.mh.moventHandler.entities.Enum_Roles).values()}"
                                 th:value="${rol}"
                                 th:text="${rol}">
