--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <style>
          /* Sidebar */
         .sidebar {
@@ -51,23 +52,46 @@
 </head>
 <body>
 
-<nav id="sidebarMenu" class=" d-lg-block sidebar bg-white">
-    <div class="position-sticky">
-        <h1 class="text-center">Menu</h1>
-        <h5 class="text-center" th:text="${empleado.correoEmpleado}"></h5>
-        <div class="list-group list-group-flush mx-3 mt-4">
-            <a th:href="@{/VerEmpleados/{id}(id=${empleado.idEmpleado})}"  class="list-group-item list-group-item-action py-2 ripple">
-                <span>Sistema de gestión de empleado</span>
-            </a>
-            <a th:href="@{/VerMovimientos/{id}(id=${empleado.idEmpleado})}" class="list-group-item list-group-item-action py-2 ripple">
-                <span>Sistema de gestión de ingresos y gastos</span>
-            </a>
-            <a th:href="@{/VerEmpresas/{id}(id=${empleado.idEmpleado})}" class="list-group-item list-group-item-action py-2 ripple">
-                <span>Sistema de gestión de empresas</span>
-            </a>
+    <div th:if="${empleado.rolEmpleado==null}" class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="error-template">
+                    <h1>
+                        Oops!</h1>
+                    <h2> No tienes Acceso</h2>
+                    <div class="error-details">
+                        Por favor comunicate con el administrador para la asignación de Rol
+                    </div>
+                    <div class="error-actions mt-2">
+                        <a th:href="@{/}" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                            Volver al Inicio </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</nav>
+
+    <main th:if="${empleado.rolEmpleado!=null}">
+        <nav id="sidebarMenu" class=" d-lg-block sidebar bg-white">
+            <div class="position-sticky">
+                <h1 class="text-center">Menu</h1>
+                <h5 class="text-center" th:text="${empleado.correoEmpleado}"></h5>
+                <div class="list-group list-group-flush mx-3 mt-4">
+                    <a th:href="@{/VerEmpleados/{id}(id=${empleado.idEmpleado})}"  class="list-group-item list-group-item-action py-2 ripple">
+                        <span>Sistema de gestión de empleado</span>
+                    </a>
+                    <a th:href="@{/VerMovimientos/{id}(id=${empleado.idEmpleado})}" class="list-group-item list-group-item-action py-2 ripple">
+                        <span>Sistema de gestión de ingresos y gastos</span>
+                    </a>
+                    <a th:href="@{/VerEmpresas/{id}(id=${empleado.idEmpleado})}" class="list-group-item list-group-item-action py-2 ripple">
+                        <span>Sistema de gestión de empresas</span>
+                    </a>
+                </div>
+            </div>
+        </nav>
+
+    </main>
+
 
 </body>
 </html>
