--- a/src/main/resources/templates/Empresa/verEmpresas.html
+++ b/src/main/resources/templates/Empresa/verEmpresas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <title>Lista de Empresas </title>
     <meta charset="utf-8">
@@ -74,7 +74,11 @@
                     <span>Sistema de gestión de empresas</span>
                 </a>
             </div>
+            <div sec:authorize="isAuthenticated()">
+                <a  class="btn btn-primary " th:href="@{/logout}">Cerrar sesión</a>
+            </div>
         </div>
+
     </nav>
 
     <div>
