--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -87,8 +87,15 @@
                         <span>Sistema de gestión de empresas</span>
                     </a>
                 </div>
+                <div sec:authorize="isAuthenticated()">
+                    <a  class="btn btn-primary " th:href="@{/logout}">Cerrar sesión</a>
+                </div>
             </div>
+
         </nav>
+
+
+
 
     </main>
 
